chore: spacing fixes

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,7 +1,7 @@
 header {
 	display: grid;
 	grid-template-columns: 1fr auto;
-	padding: 5rem 0 2rem;
+	padding: 3rem 0 2rem;
 }
 
 .logo {
