--- a/assets/styles/modules.css
+++ b/assets/styles/modules.css
@@ -56,4 +56,5 @@
 
 footer {
 	margin-top: 2rem;
+	margin-bottom: 3rem;
 }
